--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-**\\*.npy
-**\\*.pickle
-**\\*.pth
-**/*.npy
-**/*.pickle
-**/*.pth
+.\\**\\*.npy
+.\\**\\*.pickle
+.\\**\\*.pth
+./**/*.npy
+./**/*.pickle
+./**/*.pth
